# Vector2025

./: CMakeLists.txt  README.md
.github/workflows/: blank.yml
MyUML/: CMakeLists.txt  Header.h  MyPoint.h  Source.cpp
ProjectUML/: CMakeLists.txt  main.cpp
Vector/: main.cpp
VectorLib/: ErrorClass.h  Matrix.h  Vector.h
test/: CMakeLists.txt  test_Vector.cpp
